# luizalabs_teste

./: Desafio Analytics Engineer 2024.03.docx  README.md  docker-compose.yml  pyproject.toml
desafio1/: solucao1.py
desafio2/: desafio2.sql  gerartabelas.py  load.py  requirements.txt  resultado_pedidos.csv  solucao2.py  tabela_a.csv  tabela_b.csv
desafio3/: desafio3.csv  desafio3.py  json_transacoes_contas.txt  requirements.txt
