[tool.poetry]
name = "luizalabs"
version = "0.1.0"
description = ""
authors = ["Descomplicando Dados <gmnmidias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
